--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -213,6 +213,7 @@ select {
     height: auto; /* Allow height to adjust based on content */
     border-radius: 5px;
     overflow-y: auto; /* Enable scrolling if content overflows */
+    padding: 30px;
   }
   .logo-zppsu {
     display: flex;
