--- a/docs/css/index.scss
+++ b/docs/css/index.scss
@@ -236,6 +236,7 @@ body{
             height: auto; /* Allow height to adjust based on content */
             border-radius: 5px;
             overflow-y: auto; /* Enable scrolling if content overflows */
+            padding: 30px;
         }
     
         .logo-zppsu {
