Increase font sizes and improve layout alignment for better readability and responsiveness

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -220,14 +220,14 @@ select {
     height: 60px !important;
   }
   .logo-zppsu .title {
-    font-size: 1rem !important;
+    font-size: 1.3rem !important;
     top: 0px !important;
   }
   .lidc-title p {
-    font-size: 1.2rem !important;
+    font-size: 1.5rem !important;
   }
   .lidc-title span {
-    font-size: 1rem !important;
+    font-size: 1.3rem !important;
     top: 0px !important;
   }
   .name-inputs,
@@ -241,6 +241,11 @@ select {
   .logo-zppsu {
     flex-direction: column;
     gap: 0px !important;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  div {
+    text-align: center !important;
   }
 }
 .input-wrapper {
