--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -220,14 +220,15 @@ select {
     height: 60px !important;
   }
   .logo-zppsu .title {
-    font-size: 1.3rem !important;
-    top: 0px !important;
+    font-size: 1.1rem !important;
+    top: -8px !important;
   }
   .lidc-title p {
     font-size: 1.5rem !important;
+    font-weight: bold !important;
   }
   .lidc-title span {
-    font-size: 1.3rem !important;
+    font-size: 1.2rem !important;
     top: 0px !important;
   }
   .name-inputs,
