--- a/docs/css/index.scss
+++ b/docs/css/index.scss
@@ -245,16 +245,17 @@ body{
         }
     
         .logo-zppsu .title {
-            font-size: 1.3rem !important;
-            top: 0px !important;
+            font-size: 1.1rem !important;
+            top: -8px !important;
         }
     
         .lidc-title p {
             font-size: 1.5rem !important;
+            font-weight: bold !important;
         }
     
         .lidc-title span {
-            font-size: 1.3rem !important;
+            font-size: 1.2rem !important;
             top: 0px !important;
         }
     
