--- a/docs/css/index.scss
+++ b/docs/css/index.scss
@@ -207,7 +207,9 @@ body{
         padding: 5px 10px 5px 10px;
     }
 
-    
+    span{
+        color: red;
+    }
 
     select{
         border: grey solid 1px;
