--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -24,6 +24,9 @@ body {
   border-radius: 5px;
   overflow-y: auto;
 }
+.container .logos {
+  display: flex;
+}
 .container::-webkit-scrollbar {
   width: 12px;
 }
